Updated file weight HTML tag to paragraph.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <div hidden id="nested-css-container">
       <div id="comparison-container">
         <div class='before'>
-          <small class='file-weight'></small>
+          <p class='file-weight'></p>
           
           <div>
             <md-elevation></md-elevation>
@@ -270,7 +270,7 @@
           </div>
         </div>
         <div class='after'>
-          <small class='file-weight'></small>
+          <p class='file-weight'></p>
 
           <md-fab id='copy-button' size='small' aria-label="Copy to clipboard">
             <md-icon size='small' slot="icon">content_copy</md-icon>
