--- a/index.html
+++ b/index.html
@@ -309,5 +309,6 @@
     
     <script type="module" src="./src/index.js"></script>
     <script defer src="https://cdn.jsdelivr.net/gh/ireade/caniuse-embed/public/caniuse-embed.min.js"></script>
+    <script defer src="https://colorjs.io/dist/color.global.js"></script>
   </body>
 </html>
