Added note with limitations.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         flex-direction: column;
         align-items: center;
         gap: 2rem;
-        margin: 4rem auto;
+        margin: 0rem auto 4rem;
         position: relative;
       }
 
@@ -104,6 +104,13 @@
         align-items: center;
         gap: 12px;
 
+        @media screen and (max-width: 767px) {
+          flex-wrap: wrap;
+
+          & md-divider {
+            display: none
+          }
+        }
         & [type='submit'] {
           flex: 1 0 100%;
         }
@@ -113,7 +120,6 @@
         }
         & [type='button'] {
           flex: 1 0 auto;
-
         }
       }
 
@@ -209,13 +215,21 @@
 
     <div id='page-intro'>
       <h1>CSS Nesting tool</h1>
-      <p class='description'>
-        Shrink your CSS files and benefit from improving rendering performance and decreasing the impact on your users' data with CSS Nesting.
-        <br />
-        <a target='_blank' href='https://developer.chrome.com/articles/css-nesting/'>
-          Learn more about CSS Nesting
-        </a>
-      </p>
+      <div class='description'>
+        <p>
+          🚀 Shrink your CSS files and benefit from improving rendering performance and decreasing the impact on your users' data with CSS Nesting.
+        </p>
+        
+        <p>
+          📚 <a target='_blank' href='https://developer.chrome.com/articles/css-nesting/'>
+            Learn more about CSS Nesting
+          </a>
+        </p>
+
+        <p>
+          ℹ️ <i>This tool will remove comments, <code>@charset</code> declarations and browser vendor prefixes (i.e. <code>-webkit-</code>) while processing any CSS</i>
+        </p>
+      </div>
 
       <label>
         Show browser support
