--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         position: absolute;
         right: 0;
         bottom: -3rem;
+        z-index: 1;
         
         @media screen and (max-width: 767px) {
           position: fixed;
@@ -199,7 +200,6 @@
             border-radius: inherit;
             color: var(--md-sys-color-on-background);
             background-color: var(--md-sys-color-surface);
-            border: none;
             padding: 1.5rem;
             width: 100%;
             max-width: 100%;
