Minor style fixes.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         }
       }
       label:has(md-checkbox, md-switch) {
+        cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: flex-end;
