Show percentage change for before and after file size.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
       a {
         color: var(--md-sys-color-on-background);
       }
-      
+      .green-text {
+        color: green;
+      }
+      .red-text {
+        color: red;
+      }
+
       #page-intro {
         display: flex;
         flex-direction: column;
