Moved converting colors as an option.

--- a/index.html
+++ b/index.html
@@ -258,9 +258,13 @@
       </md-filled-text-field>
 
       <div id='options'>
-        <label id='minify-css-label'>
+        <label>
           Minify Nested CSS
           <md-checkbox touch-target="wrapper" id='minify-css-checkbox' checked></md-checkbox>
+        </label>
+        <label>
+          Convert colors to HEX
+          <md-checkbox touch-target="wrapper" id='convert-colors-checkbox'></md-checkbox>
         </label>
       </div>
 
